#86 Refactor(RestaurantServiceTest): 리팩토링된 서비스 코드와 테스트 환경 코드에 따라 리팩토링하기